library/src/usr/include/russ/russ.h

typedef int64_t russ_deadline;
/**
* Server object.
*/
struct russ_svr {
	struct russ_svcnode	*root;
	int			type;
	pid_t			mpid;
	long			ctime;
	char			*saddr;
	int			lisd;
	int			closeonaccept;
	russ_accepthandler	accepthandler;
	int			accepttimeout;
	russ_answerhandler	answerhandler;
	int			awaittimeout;
	int			autoswitchuser;
	char			*help;
};
void russ_svr_loop(struct russ_svr *);
/* time.c */
russ_deadline russ_gettime(void); /* internal */
russ_deadline russ_to_deadline(int);
russ_deadline russ_to_deadlinediff(russ_deadline);
int russ_to_timeout(russ_deadline);