pyruss/static/usr/lib/python/pyruss/bindings.py


libruss.russ_svr_loop.argtypes = [
    ctypes.POINTER(russ_svr_Structure),
]
libruss.russ_svr_loop.restype = None

#
# from time.h
#
libruss.russ_gettime.argtypes = []
libruss.russ_gettime.restype = russ_deadline

libruss.russ_to_deadline.argtypes = [
    ctypes.c_int,
]
libruss.russ_to_deadline.restype = russ_deadline

libruss.russ_to_deadlinediff.argtypes = [
    russ_deadline,
]
libruss.russ_to_deadlinediff.restype = russ_deadline

libruss.russ_to_timeout.argtypes = [
    russ_deadline,
]
libruss.russ_to_timeout.restype = ctypes.c_int
